# SovereignEdge-TEE-Agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
configs/: default.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/edge-agent/: Cargo.toml
crates/edge-agent/src/: hardware.rs  inference.rs  lib.rs  main.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: builders.rs  fixtures.rs  lib.rs  metrics.rs  time.rs
crates/pqc-transport/: Cargo.toml
crates/pqc-transport/src/: lib.rs
crates/tee-gateway/: Cargo.toml
crates/tee-gateway/src/: lib.rs  main.rs
crates/xdp-ingest/: Cargo.toml
crates/xdp-ingest/bpf/: xdp_prog.c
crates/xdp-ingest/src/: main.rs
crates/zk-proofs/: Cargo.toml
crates/zk-proofs/src/: lib.rs
docs/: ARCHITECTURE.md  DEMO_TRANSCRIPT.md  HELPERS_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS.md  QUICKSTART.md  SUBMISSION.md  demo.cast
evidence/: alibaba_cloud_setup.md
scripts/: build.sh  demo.sh
src/edge_agent/: agent.rs
src/pqc_transport/: hybrid_pqc.rs
src/tee_gateway/: gateway.rs
src/xdp_ingest/: af_xdp_daemon.rs
src/zk_proofs/: zk_verifier.rs
tests/fixtures/: sample_frames.json  test_policies.toml
tests/integration/: pipeline_test.rs  pqc_transport_test.rs
verification/: README.md  SovereignEdge.lean  lake-manifest.json  lakefile.toml
verification/SovereignEdge/: ContextBuffer.lean  ModeMachine.lean  Nonce.lean  Policy.lean
