[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for SovereignEdge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
