[package]
name = "edge-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Edge agent with local inference and graceful degradation"

[[bin]]
name = "edge_agent"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
pqc-transport = { path = "../pqc-transport" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
