[package]
name = "edge-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Edge agent with local inference and graceful degradation"

[[bin]]
name = "edge_agent"
path = "src/main.rs"

[features]
# Real local inference with llama.cpp (GGUF models). Requires cmake + a C++
# toolchain to build; the default build uses the simulated backend instead.
llama = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
llama-cpp-2 = { version = "0.1.151", optional = true }
encoding_rs = { version = "0.8", optional = true }
common = { workspace = true }
helpers = { workspace = true }
pqc-transport = { path = "../pqc-transport" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
