[package]
name = "tee-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TEE Gateway for confidential Qwen Cloud integration"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[[bin]]
name = "tee_gateway"
path = "src/main.rs"
