[package]
name = "zk-proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-Knowledge proofs for policy verification"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
