[package]
name = "zk-proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-Knowledge proofs for policy verification"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }

[features]
default = ["simulated"]
simulated = []
real-zk = []
